--- a/languages/en.json
+++ b/languages/en.json
@@ -4,7 +4,7 @@
     "english": "English"
   },
   "left": {
-    "jobDescription": "Web developer junior",
+    "jobDescription": "Junior Web Developer",
     "contact": "Contact Info",
     "education": "Education",
     "firstEducationDate": "2021 - Currently",
@@ -19,12 +19,18 @@
     "profile": "Profile",
     "profileDescription": "I am a very hard-working, sociable, punctual person and I like to work in a team, my goal is to improve my skills day by day with a lot of effort and dedication.",
     "experience": "Experience",
+    "intechDate": "May 2022 - Current",
+    "intechJob": "Junior Web Developer",
+    "intechDescription": "Web design and development",
+    "atlanticDate": "Feb - May 2022",
+    "atlanticJob": "Junior Web Developer",
+    "atlanticDescription": "Web design and development, server and mail account administration",
     "dimensionDate": "Oct - Nov 2021",
     "dimensionJob": "Web Developer Junior",
-    "dimensionDescription": "Realization of web pages (frontend and backend)",
+    "dimensionDescription": "Internships in companies, Realization of web pages (frontend and backend)",
     "cagDate": "June 2019",
     "cagJob": "Computer Technician",
-    "cagDescription": "Practices, performing maintenance and repair tasks of computer equipment",
+    "cagDescription": "Internships in companies, performing maintenance and repair tasks of computer equipment",
     "professionalSkills": "Professional skills",
     "interest": "Interest",
     "gaming": "<i class='fas fa-gamepad'></i> Gaming",
