--- a/languages/es.json
+++ b/languages/es.json
@@ -19,6 +19,12 @@
     "profile": "Perfil",
     "profileDescription": "Soy una persona muy trabajadora, puntual, sociable y me gusta trabajar en equipo, mi objetivo es mejorar día a día mis habilidades con mucho esfuerzo y dedicación.",
     "experience": "Experiencia laboral",
+    "intechDate": "Mayo 2022 - Actual",
+    "intechJob": "Desarrollador Web Junior",
+    "intechDescription": "Diseño  y desarrollo de páginas web",
+    "atlanticDate": "Feb - May 2022",
+    "atlanticJob": "Desarrollador Web Junior",
+    "atlanticDescription": "Diseño  y desarrollo de páginas web, administración de servidor y cuentas de correo",
     "dimensionDate": "Oct - Nov 2021",
     "dimensionJob": "Desarrollador Web Junior",
     "dimensionDescription": "FCT, realización de páginas web (frontend y backend)",
