--- a/languages/en.json
+++ b/languages/en.json
@@ -7,17 +7,20 @@
     "jobDescription": "Junior Web Developer",
     "contact": "Contact Info",
     "education": "Education",
-    "firstEducationDate": "2021 - Currently",
-    "firstEducation": "Senior Technician in Web Application Development",
-    "secondEducation": "Senior Technician in Network Informatics Systems Administration",
-    "thirdEducation": "Certificate of Professionalism in Micro-informatics Systems",
+    "firstEducationDate": "May 2022 - Currently",
+    "firstEducation": "web development",
+    "firstEducationSchool": "ADF Academy",
+    "secondEducationDate": "2021 - Currently",
+    "secondEducation": "Senior Technician in Web Application Development",
+    "thirdEducation": "Senior Technician in Network Informatics Systems Administration",
+    "fourthEducation": "Certificate of Professionalism in Micro-informatics Systems",
     "languages": "Languages",
     "firstLanguage": "Spanish",
     "secondLanguage": "English"
   },
   "right": {
     "profile": "Profile",
-    "profileDescription": "I am a very hard-working, sociable, punctual person and I like to work in a team, my goal is to improve my skills day by day with a lot of effort and dedication.",
+    "profileDescription": "I consider myself passionate about computers and web development. I am a hard worker, punctual, responsible, sociable and I like to work in a team.",
     "experience": "Experience",
     "intechDate": "May 2022 - Current",
     "intechJob": "Junior Web Developer",
@@ -26,16 +29,16 @@
     "atlanticJob": "Junior Web Developer",
     "atlanticDescription": "Web design and development, server and mail account administration",
     "dimensionDate": "Oct - Nov 2021",
-    "dimensionJob": "Web Developer Junior",
+    "dimensionJob": "Junior Web Developer",
     "dimensionDescription": "Internships in companies, Realization of web pages (frontend and backend)",
     "cagDate": "June 2019",
     "cagJob": "Computer Technician",
     "cagDescription": "Internships in companies, performing maintenance and repair tasks of computer equipment",
     "professionalSkills": "Professional skills",
     "interest": "Interest",
-    "gaming": "<i class='fas fa-gamepad'></i> Gaming",
-    "swiming": "<i class='fas fa-swimmer'></i> Swiming",
-    "cooking": "<i class='fas fa-utensils'></i> Cooking",
-    "walking": "<i class='fas fa-walking'></i> Walking"
+    "development": "<i class='fas fa-code'></i> &nbsp;&nbsp;Development",
+    "gaming": "<i class='fas fa-gamepad'></i> &nbsp;&nbsp;Gaming",
+    "swiming": "<i class='fas fa-swimmer'></i> &nbsp;&nbsp;Swiming",
+    "cooking": "<i class='fas fa-utensils'></i> Cooking"
   }
 }
