--- a/languages/es.json
+++ b/languages/es.json
@@ -7,17 +7,20 @@
     "jobDescription": "Programador web junior",
     "contact": "Contacto",
     "education": "Estudios",
-    "firstEducationDate": "2021 - Actualmente",
-    "firstEducation": "Técnico Superior en Desarrollo de Aplicaciones Web",
-    "secondEducation": "Técnico Superior en Administración de Sistemas Informaticos de Red",
-    "thirdEducation": "Certificado de profesionalidad en Sistemas Microinformáticos",
+    "firstEducationDate": "Mayo 2022 - Actualmente",
+    "firstEducation": "Desarrollo Web",
+    "firstEducationSchool": "Academia ADF",
+    "secondtEducationDate": "2021 - Actualmente",
+    "secondEducation": "Técnico Superior en Desarrollo de Aplicaciones Web",
+    "thirdEducation": "Técnico Superior en Administración de Sistemas Informaticos de Red",
+    "fourthEducation": "Certificado de profesionalidad en Sistemas Microinformáticos",
     "languages": "Idiomas",
     "firstLanguage": "Español",
     "secondLanguage": "Inglés"
   },
   "right": {
     "profile": "Perfil",
-    "profileDescription": "Soy una persona muy trabajadora, puntual, sociable y me gusta trabajar en equipo, mi objetivo es mejorar día a día mis habilidades con mucho esfuerzo y dedicación.",
+    "profileDescription": "Me considero un apasionado de la informática y del desarrollo web. Soy una persona muy trabajadora, puntual, responsable, sociable y me gusta trabajar en equipo.",
     "experience": "Experiencia laboral",
     "intechDate": "Mayo 2022 - Actual",
     "intechJob": "Desarrollador Web Junior",
@@ -33,9 +36,9 @@
     "cagDescription": "FCT, reparación y mantenimiento de equipos informáticos",
     "professionalSkills": "Habilidades profesionales",
     "interest": "Intereses",
-    "gaming": "<i class='fas fa-gamepad'></i> Juegos",
-    "swiming": "<i class='fas fa-swimmer'></i> Natación",
-    "cooking": "<i class='fas fa-utensils'></i> Cocina",
-    "walking": "<i class='fas fa-walking'></i> Pasear"
+    "development": "<i class='fas fa-walking'></i> &nbsp;Desarrollo",
+    "gaming": "<i class='fas fa-gamepad'></i>  &nbsp;&nbsp;Juegos",
+    "swiming": "<i class='fas fa-swimmer'></i>  &nbsp;&nbsp;Natación",
+    "cooking": "<i class='fas fa-utensils'></i> Cocina"
   }
 }
