--- a/languages/es.json
+++ b/languages/es.json
@@ -4,14 +4,14 @@
     "english": "Inglés"
   },
   "left": {
-    "jobDescription": "Programador web junior",
+    "jobDescription": "Programador web",
     "contact": "Contacto",
     "education": "Estudios",
-    "firstEducationDate": "Mayo 2022 - Actualmente",
-    "firstEducation": "Desarrollo Web",
-    "firstEducationSchool": "Academia ADF",
-    "secondtEducationDate": "2021 - Actualmente",
-    "secondEducation": "Técnico Superior en Desarrollo de Aplicaciones Web",
+    "firstEducationDate": "2021 - 2024",
+    "firstEducation": "Técnico Superior en Desarrollo de Aplicaciones Web",
+    "secondEducationDate": "Mayo - nov 2022",
+    "secondEducation": "Desarrollo Web",
+    "secondEducationSchool": "Academia ADF",
     "thirdEducation": "Técnico Superior en Administración de Sistemas Informaticos de Red",
     "fourthEducation": "Certificado de profesionalidad en Sistemas Microinformáticos",
     "languages": "Idiomas",
@@ -23,7 +23,7 @@
     "profileDescription": "Me considero un apasionado de la informática y del desarrollo web. Soy una persona muy trabajadora, puntual, responsable, sociable y me gusta trabajar en equipo.",
     "experience": "Experiencia laboral",
     "intechDate": "Mayo 2022 - Actual",
-    "intechJob": "Desarrollador Web Junior",
+    "intechJob": "Desarrollador Web",
     "intechDescription": "Diseño  y desarrollo de páginas web",
     "atlanticDate": "Feb - May 2022",
     "atlanticJob": "Desarrollador Web Junior",
