--- a/languages/en.json
+++ b/languages/en.json
@@ -4,14 +4,15 @@
     "english": "English"
   },
   "left": {
-    "jobDescription": "Junior Web Developer",
+    "jobDescription": "Web Developer",
     "contact": "Contact Info",
     "education": "Education",
-    "firstEducationDate": "May 2022 - Currently",
-    "firstEducation": "web development",
+    "firstEducationDate": "2021 - 2024",
+    "firstEducation": "Senior Technician in Web Application Development",
     "firstEducationSchool": "ADF Academy",
-    "secondEducationDate": "2021 - Currently",
-    "secondEducation": "Senior Technician in Web Application Development",
+    "secondEducationDate": "May - Nov 2022",
+    "secondEducation": "Web development",
+    "secondEducationSchool": "ADF Academy",
     "thirdEducation": "Senior Technician in Network Informatics Systems Administration",
     "fourthEducation": "Certificate of Professionalism in Micro-informatics Systems",
     "languages": "Languages",
@@ -23,14 +24,14 @@
     "profileDescription": "I consider myself passionate about computers and web development. I am a hard worker, punctual, responsible, sociable and I like to work in a team.",
     "experience": "Experience",
     "intechDate": "May 2022 - Current",
-    "intechJob": "Junior Web Developer",
+    "intechJob": "Web Developer",
     "intechDescription": "Web design and development",
     "atlanticDate": "Feb - May 2022",
     "atlanticJob": "Junior Web Developer",
     "atlanticDescription": "Web design and development, server and mail account administration",
     "dimensionDate": "Oct - Nov 2021",
     "dimensionJob": "Junior Web Developer",
-    "dimensionDescription": "Internships in companies, Realization of web pages (frontend and backend)",
+    "dimensionDescription": "Internships in companies, realization of web pages (frontend and backend)",
     "cagDate": "June 2019",
     "cagJob": "Computer Technician",
     "cagDescription": "Internships in companies, performing maintenance and repair tasks of computer equipment",
